mypivot.deploy/base/mypivot4-fe/mypivot4-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypivot4-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "90"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/app-root: /mypivot4/home
spec:
  tls:
  - hosts:
    - mypivot4._BASE_URL_
  rules:
  - host: mypivot4._BASE_URL_
    http:
      paths:
      - path: /mypivot4
        pathType: Prefix
        backend:
          service:
            name: mypivot4-frontend-service
            port:
              number: 8080
      - path: /mypivot4/api
        pathType: Prefix
        backend:
          service:
            name: mypivot4-backend-service
            port:
              number: 8081
